--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-QZ0W1RCF62');
     </script>
     <title>Image Blur</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <meta property="og:title" content="Image Blur" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -75,48 +76,13 @@
                 </div>
               </nav>
             </div>
-            <div data-thq="thq-burger-menu" class="home-burger-menu">
-              <button class="home-work-with-us1 button">
-                <span class="home-text02">work with us</span>
-                <img
-                  alt="image"
-                  src="public/hamburger.svg"
-                  class="home-image01"
-                />
-              </button>
-            </div>
             <div data-thq="thq-mobile-menu" class="home-mobile-menu">
               <div
                 data-thq="thq-mobile-menu-nav"
                 data-role="Nav"
                 class="home-nav1"
               >
-                <div class="home-top">
-                  <div class="home-branding1">
-                    <span class="home-text03">hola studio</span>
-                  </div>
-                  <div data-thq="thq-close-menu" class="home-menu-close">
-                    <svg viewBox="0 0 1024 1024" class="home-icon">
-                      <path
-                        d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <nav
-                  data-thq="thq-mobile-menu-nav-links"
-                  data-role="Nav"
-                  class="home-middle"
-                >
-                  <div class="home-links">
-                    <span class="navLink">work</span>
-                    <span class="navLink">services</span>
-                    <span class="navLink">contact</span>
-                  </div>
-                  <button class="home-work-with-us2 button">
-                    <span class="home-text04">work with us</span>
-                  </button>
-                </nav>
+               
               </div>
             </div>
           </header>
@@ -124,7 +90,7 @@
         <div class="home-hero">
           <div class="home-header">
             <h1 class="home-text05">
-              Image Blur - Your Website Image Privacy Solution
+              Image Blur - Your Website Image Privacy Solution, chrome extension
             </h1>
             <h1 class="home-text06">
               <span></span>
